UI improvement and fixed alignments

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ header .header-menu {
 }
 
 section {
-  margin-top: 25px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   gap: 9px;
@@ -119,7 +119,10 @@ article footer button img {
 }
 
 .createTask {
-  width: 40%;
+  position: absolute;
+  bottom: 15px;
+  min-width: 350px;
+  width: 28%;
   padding: 15px 20px;
   background-color: black;
   border-radius: 25px;
@@ -134,7 +137,7 @@ article footer button img {
   background: none;
   border: none;
   color: white;
-  width: 350px;
+  width: 380px;
 }
 
 .createTask > div input:focus-visible {
@@ -250,28 +253,9 @@ header > img {
   width: 100%;
 }
 
-.progressBar {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: var(--progress-width) solid #202020;
-}
-
-.progress {
-  position: absolute;
-  top: calc(-1 * var(--progress-width));
-  right: calc(-1 * var(--progress-width));
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: var(--progress-width) solid black;
-}
-
 .status {
   display: flex;
   align-items: center;
-  gap: 2px;
 }
 
 .subHead {
@@ -284,4 +268,8 @@ header > img {
 .leftOver {
   font-style: italic;
   color: #383838;
+}
+
+.progressBar {
+  transform: rotate(-90deg);
 }
